<resources>
    <string name="app_name">tidy</string>
    <string name="overview_title">Overview</string>
    <string name="overview_desc">You can find all of the rooms and supplies to clean with.</string>
    <string name="pick_image">Pick image</string>


    <!-- Task view items -->
    <string name="tasks_title">Tasks</string>
    <string name="tasks_main_description">Here are all the tasks!</string>

    <!-- Add tasks items -->
    <string name="task_description">Description (optional)</string>
    <string name="task_name">Task</string>
    <string name="task_complete_date">Date completed</string>
    <string name="task_user">Username</string>
    <string name="task_due_date">Due date</string>

    <!-- Login info -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NextButton">Go</string>
    <string name="Email_Address">Email Address</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_Up_Text">No account yet?</string>
    <string name="Password">Password</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Email">Email Address</string>
    <string name="Space_ID">Space ID</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="Administrator">Admin</string>

    <!-- Nav bar -->
    <string name="room_view">Rooms</string>
    <string name="task_view">Tasks</string>
    <string name="settings">Settings</string>
    <string name="augmented_reality">Augmented Reality</string>

    <string name="supplies">Supplies</string>
    <string name="rooms">Rooms</string>
    <string name="supply_dropdown">Select Supplies</string>
    <string name="task_history">Task History</string>
    <string name="task_hist_description">Here are all the completed tasks!</string>
    <string name="history">History</string>


    <!--    Admin Title-->
    <string name="admin_title">Admin</string>
    <string name="or">OR</string>
    <string name="create_new_space">Create a New Space</string>
    <string name="edit_existing_space">Edit Existing Space</string>
    <string name="admin_description">Create or edit spaces.</string>
    <string name="enter_valid_id">Enter a valid Space ID</string>
    <string name="add_items">Add Items</string>
    <string name="add_supplies">Add Supply</string>
    <string name="add_tasks">Add Task</string>
    <string name="room">Room</string>
    <string name="spaceID">Space ID: </string>
    <string name="supply">Supply</string>
    <string name="add_supply">Add Supply</string>
    <string name="add_room">Add Room</string>
    <string name="update_supply">Update Supply</string>
    <string name="update_tasks">Update Tasks</string>
    <string name="existing_supplies">Existing Supplies</string>
    <string name="existing_room">Existing Rooms</string>
    <string name="existing_tasks">Existing Tasks</string>
    <string name="room_description">Add a description of the room</string>
    <string name="supply_description">Add a description of the supply</string>
    <string name="clear">Clear</string>
    <string name="update_room">Update Room</string>
    <string name="invalid">invalid</string>
    <string name="add">Add</string>

    <string-array name="supplies">
        <item>Vacuum Cleaner</item>
        <item>Broom</item>
        <item>Mop</item>
        <item>All Purpose Cleaner</item>
        <item>Window Cleaner</item>
        <item>Bathroom Cleaner</item>
        <item>Bleach</item>
        <item>Rags</item>
        <item>Bucket</item>
    </string-array>

    <string-array name="tasks">
        <item>Clean floor</item>
        <item>Clean window</item>
        <item>Clean counter</item>
        <item>Clean extraction vent</item>
        <item>Clean wall behind hotplates</item>
        <item>Clean microwave</item>
        <item>Clean couch</item>
        <item>Throw out trash bags</item>
        <item>Clean hotplates</item>
        <item>Clean fridge</item>
        <item>Clean freezer</item>
        <item>Clean oven</item>
    </string-array>

    <string-array name="rooms">
        <item>Living room</item>
        <item>Kitchen</item>
        <item>Bathroom</item>
        <item>Hallway</item>
        <item>Common area</item>
    </string-array>

    <!--  AR  -->
    <string name="fit_image_to_scan">Fit image to scan</string>
    <string name="sample_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</string>
    <string name="ar_welcome">Welcome to Tidy\'s AR Feature!</string>
    <string name="ar_guide">Move around your space to get instant description and help on what needs to be done! Sleek right?</string>
    <string name="repeat_every">Repeat Every</string>
    <string name="task_due_date_title">due on the </string>
</resources>