<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/HistoryFragment"
        android:title="@string/history"
        app:labelVisibilityMode="labeled"/>

    <item
        android:id="@+id/OverviewFragment"
        android:title="@string/room_view"
        app:labelVisibilityMode="labeled"/>
    <item
        android:id="@+id/TasksFragment"
        android:title="@string/task_view"
        app:labelVisibilityMode="labeled"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:labelVisibilityMode="labeled"/>
    <item
        android:id="@+id/augmentedReality"
        android:title="@string/augmented_reality"
        app:labelVisibilityMode="labeled"/>
</menu>