<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="255dp"
            android:layout_marginTop="220dp"
            android:src="@drawable/broom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:hint="@string/Password"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="@id/email" />

        <Button
            android:id="@+id/toTask"
            android:layout_width="61dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/tidy_primary"
            android:text="@string/NextButton"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/toPassword"
            app:layout_constraintEnd_toEndOf="@id/toPassword" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginEnd="52dp"
            android:hint="@string/Email_Address"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/toTask"
            app:layout_constraintTop_toTopOf="@+id/toTask" />

        <Button
            android:id="@+id/toPassword"
            android:layout_width="61dp"
            android:layout_height="48dp"
            android:layout_marginStart="300dp"
            android:backgroundTint="@color/tidy_primary"
            android:text="@string/NextButton"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.134" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/Sign_Up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:backgroundTint="@color/tidy_primary"/>

        <TextView
            android:id="@+id/Sign_up_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_Up_Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.49" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>